--- a/detox.html
+++ b/detox.html
@@ -3,84 +3,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Section with Nav</title>
+    <title>Enquire Now Button with Arrow</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .hero {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            background: url('driphero.webp') no-repeat center center/cover;
-        }
-        .navbar {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
+        /* Floating Button */
+        .enquire-container {
+            position: fixed;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            padding: 20px 50px;
         }
-        .navbar a {
-            text-decoration: none;
-            color: white;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-        .logo {
+
+        /* Arrow Animation */
+        .arrow {
             font-size: 24px;
-            font-weight: bold;
-            color: white;
+            color: #ff6600;
+            margin-right: 8px;
+            animation: bounce 1.5s infinite;
         }
-        .hero-content {
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateX(0);
+            }
+            50% {
+                transform: translateX(-8px);
+            }
+        }
+
+        /* Enquire Button */
+        .enquire-button {
+            background: #0026ff;
+            color: white;
+            padding: 15px 20px;
+            border-radius: 30px 0 0 30px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            writing-mode: vertical-rl;
+            text-align: center;
+            transition: background 0.3s;
+        }
+
+        .enquire-button:hover {
+            background: #001bbf;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            background: white;
+            padding: 30px;
+            width: 350px;
+            border-radius: 10px;
             text-align: center;
-            color: white;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
         }
-        .hero-content h1 {
-            font-size: 48px;
-            font-weight: bold;
+
+        .modal-content h2 {
+            margin-bottom: 15px;
+            font-size: 22px;
         }
-        .cta-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
-            background: blue;
+
+        .modal-content input,
+        .modal-content textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .modal-content button {
+            background: #0026ff;
             color: white;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 25px;
+            border: none;
+            padding: 10px 15px;
+            margin-top: 10px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .modal-content button:hover {
+            background: #001bbf;
+        }
+
+        /* Close Button */
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 20px;
+            cursor: pointer;
+            color: #888;
+        }
+
+        .close:hover {
+            color: black;
         }
     </style>
 </head>
 <body>
-    <div class="hero">
-        <nav class="navbar">
-            <div class="logo">REVIV</div>
-            <div>
-                <a href="#">IV Drip Therapy</a>
-                <a href="#">Vitamin Shots</a>
-                <a href="#">Our Services</a>
-                <a href="#">Genetics</a>
-                <a href="#">Nutrients</a>
-                <a href="#">R LIFE Blog</a>
-            </div>
-        </nav>
-        <div class="hero-content">
-            <h1>FEEL MORE <strong>YOU</strong></h1>
-            <a href="#" class="cta-button">BOOK NOW</a>
+
+    <!-- Floating Enquire Button with Arrow -->
+    <div class="enquire-container">
+        <div class="arrow">&#x2192;</div> <!-- Arrow pointing to the button -->
+        <div class="enquire-button" id="openModal">Enquire Now</div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <h2>Enquire Now</h2>
+            <form>
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="4" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
         </div>
     </div>
+
+    <script>
+        // Get modal elements
+        const modal = document.getElementById("modal");
+        const openModal = document.getElementById("openModal");
+        const closeModal = document.getElementById("closeModal");
+
+        // Open modal on button click
+        openModal.addEventListener("click", () => {
+            modal.style.display = "block";
+        });
+
+        // Close modal when clicking the close button
+        closeModal.addEventListener("click", () => {
+            modal.style.display = "none";
+        });
+
+        // Close modal when clicking outside the modal content
+        window.addEventListener("click", (e) => {
+            if (e.target === modal) {
+                modal.style.display = "none";
+            }
+        });
+    </script>
+
 </body>
 </html>
