--- a/index.html
+++ b/index.html
@@ -2748,7 +2748,8 @@ function toggleDropdowns(element) {
             </ul>
 
             <!-- Call-to-Action Button -->
-            <a href="https://wa.me/9182830417?text=Hi%20Drip%20Labs,%20I%20would%20like%20to%20know%20more%20about%20your%20services." class="btn" target="_blank">
+            <a href="https://wa.me/9182830417?text=Hi%20Drip%20Labs,%20I%20would%20like%20to%20know%20more%20about%20your%20services." class="btn" target="_blank"style="
+    bottom: -15px;">
                 <span>Book your Drips </span>
             </a>
         </div>
